--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.8.0
 click==8.1.3
 dnspython==2.2.1
+dominate==2.6.0
 email-validator==1.2.1
 Flask==2.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -11,12 +13,16 @@ greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.12.0
+is-disposable-email==1.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
 SQLAlchemy==1.4.39
+visitor==0.1.3
 Werkzeug==2.1.2
 WTForm==1.0
 WTForms==3.0.1
+WTForms-SQLAlchemy==0.3
+wtforms-validators==1.0.0
 zipp==3.8.0
