--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.8.0
+cachelib==0.9.0
 click==8.1.3
 dnspython==2.2.1
 dominate==2.6.0
@@ -7,6 +8,7 @@ Flask==2.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
+Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
