--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,48 @@
 alembic==1.8.0
+attrs==21.4.0
+Automat==20.2.0
 cachelib==0.9.0
+cffi==1.15.1
 click==8.1.3
+constantly==15.1.0
+cryptography==37.0.2
 dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.2.1
 Flask==2.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.1
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==3.3
 importlib-metadata==4.12.0
+incremental==21.3.0
 is-disposable-email==1.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
+marshmallow==3.17.0
+marshmallow-sqlalchemy==0.28.0
+packaging==21.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+qt4reactor==1.6
+rsa==4.8
+service-identity==21.1.0
+six==1.16.0
 SQLAlchemy==1.4.39
+Twisted==22.4.0
+typing_extensions==4.3.0
 visitor==0.1.3
 Werkzeug==2.1.2
 WTForm==1.0
@@ -28,3 +50,4 @@ WTForms==3.0.1
 WTForms-SQLAlchemy==0.3
 wtforms-validators==1.0.0
 zipp==3.8.0
+zope.interface==5.4.0
